fix navbar covering content on mozilla browsers

--- a/application/app/globals.css
+++ b/application/app/globals.css
@@ -32,3 +32,10 @@ h1 {
 h2 {
     @apply text-3xl;
 }
+
+@-moz-document url-prefix() {
+    /* CSS Code */
+   main { 
+    margin-top: 6rem;
+   }
+ }
